syntax = "proto3";

package calc;

option go_package = "github.com/d-issy/sandbox/grpc/calc/protobuf";

message SubRequest {
  int32 first = 1;
  int32 second = 2;
}

message SubResponse {
  int32 result = 1;
}
